fix(Review related classes): Make review related requests work with associations
Make review related requests work with associations